--- a/cloudapp/src/app/main/main.component.html
+++ b/cloudapp/src/app/main/main.component.html
@@ -24,37 +24,41 @@
   <ng-template #entitylist>
     <div class="eca-actions">
       <button mat-flat-button color="secondary" (click)="clear()" [disabled]="!selectedEntity">Clear</button>
-      <button mat-flat-button color="primary" (click)="update(apiResultArea.value)"
+      <!-- <button mat-flat-button color="primary" (click)="update(apiResultArea.value)"
         [disabled]="!apiResult || loading">Update
-      </button>
+      </button> -->
     </div>
-    <h1>Entities</h1>
-    <mat-card [style.display]="apiResult ? '' : 'none'">
+    <h1>Items</h1>
+    <!-- <mat-card [style.display]="apiResult ? '' : 'none'">
       <mat-card-header>
         <mat-card-title>API Result</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <textarea #apiResultArea [value]="apiResult | json"></textarea>
       </mat-card-content>
-    </mat-card>
-    <mat-card [style.display]="selectedEntity ? '' : 'none'">
-      <mat-card-header>
-        <mat-card-title>Selected Entity</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <pre>{{selectedEntity | json}}</pre>
-      </mat-card-content>
-    </mat-card>  
-    <label id="entities-radio-group-label">Select an entity:</label>
-    <mat-radio-group
-      aria-labelledby="entities-radio-group-label"
-      class="entities-radio-group"
-      [(ngModel)]="selectedEntity"
-      (change)="entitySelected($event)">
-      <mat-radio-button *ngFor="let entity of entities" [value]="entity">
-        {{entity.description}}
-      </mat-radio-button>
-    </mat-radio-group>
+    </mat-card> -->
+    <div *ngIf="selectedEntity; else elseBlock">
+      <mat-card [style.display]="selectedEntity ? '' : 'none'">
+        <mat-card-header>
+          <mat-card-title>Selected Entity</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <pre>{{selectedEntity | json}}</pre>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <ng-template #elseBlock>
+      <label id="entities-radio-group-label">Select an entity:</label>
+      <mat-radio-group
+        aria-labelledby="entities-radio-group-label"
+        class="entities-radio-group"
+        [(ngModel)]="selectedEntity"
+        (change)="entitySelected($event)">
+        <mat-radio-button *ngFor="let entity of entities" [value]="entity">
+          {{entity.description}}
+        </mat-radio-button>
+      </mat-radio-group>
+    </ng-template>
   </ng-template>
 </div>
 <div class="loading-shade" *ngIf="loading">
